[gd_scene load_steps=14 format=3 uid="uid://bcegueepscj4j"]

[ext_resource type="Theme" uid="uid://crkw145md0nk" path="res://themes/nested_ui/popup_ui.tres" id="1_vrx5q"]
[ext_resource type="Script" uid="uid://bv8ojkybmhxpf" path="res://scripts/battle/battle_scene/battle_stats_panel.gd" id="2_n0f8k"]
[ext_resource type="Theme" uid="uid://dspb6mujs3bb2" path="res://themes/title_text_theme.tres" id="3_ypxek"]
[ext_resource type="Theme" uid="uid://dsowi08f2y6iv" path="res://themes/root_theme.tres" id="4_71obm"]
[ext_resource type="Texture2D" uid="uid://b25no5y38ry06" path="res://graphics/ui/berserk.png" id="4_g3nw3"]
[ext_resource type="PackedScene" uid="uid://chpi5qfgk1cqj" path="res://prefabs/ui/sfx_button.tscn" id="5_2baye"]
[ext_resource type="PackedScene" uid="uid://cl2b2giyrbc0i" path="res://prefabs/ui/stats/stat_line_panel.tscn" id="5_qvaly"]
[ext_resource type="Texture2D" uid="uid://biscd4ubrdmwc" path="res://graphics/ui/question_mark.png" id="6_kiy60"]
[ext_resource type="PackedScene" uid="uid://bmbx4qteugtm0" path="res://prefabs/battle/orb_display.tscn" id="7_pcqma"]
[ext_resource type="PackedScene" uid="uid://cxs31up6d6dxj" path="res://prefabs/ui/tooltip_panel.tscn" id="8_ipv3d"]
[ext_resource type="PackedScene" uid="uid://ckmtkra7k3ey2" path="res://prefabs/ui/stats/equipment_icons_panel.tscn" id="11_1hqtk"]
[ext_resource type="StyleBox" uid="uid://cqjpxgwhrhqj2" path="res://themes/nested_ui/inner_panel.tres" id="12_nophx"]
[ext_resource type="PackedScene" uid="uid://c2mulpmm5i311" path="res://prefabs/battle/battle_runes_panel.tscn" id="12_qe6f0"]

[node name="BattleStatsPanel" type="Panel" groups=["BattleStatsPanel"]]
offset_right = 1180.0
offset_bottom = 554.0
theme = ExtResource("1_vrx5q")
script = ExtResource("2_n0f8k")

[node name="CombatantName" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 3.0
offset_bottom = 53.0
grow_horizontal = 2
theme = ExtResource("3_ypxek")
bbcode_enabled = true
text = "[center]Tree-Bear[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -229.0
offset_right = 280.0
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="StatusIconControl" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="StatusSprite" type="Sprite2D" parent="HBoxContainer/StatusIconControl"]
position = Vector2(16, 16)
scale = Vector2(2, 2)
texture = ExtResource("4_g3nw3")

[node name="StatusEffect" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 28)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme = ExtResource("4_71obm")
bbcode_enabled = true
text = "[center]Experiencing Overwhelming Exhaustion[/center]"

[node name="StatusHelpButton" parent="HBoxContainer" instance=ExtResource("5_2baye")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("6_kiy60")
icon_alignment = 1
expand_icon = true

[node name="RunesButton" parent="." instance=ExtResource("5_2baye")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 295.0
offset_top = -228.0
offset_right = 373.0
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
text = "Runes"

[node name="OrbDisplay" parent="." instance=ExtResource("7_pcqma")]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -201.0
offset_right = 0.0
offset_bottom = -189.0
scale = Vector2(2, 2)

[node name="StatLinePanel" parent="." instance=ExtResource("5_qvaly")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 10.0
offset_top = -178.0
offset_right = 570.0
offset_bottom = 177.0
grow_vertical = 2
readOnly = true
battleStats = true

[node name="DmgBoostsMultPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 610.0
offset_top = -455.0
offset_right = 1170.0
offset_bottom = -163.0
grow_vertical = 0
theme_override_styles/panel = ExtResource("12_nophx")

[node name="DmgBoostsLabel" type="RichTextLabel" parent="DmgBoostsMultPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Move Damage Boosts:[/center]"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="DmgBoostsMultPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = 26.0
offset_right = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="ElementDmgMultText" type="RichTextLabel" parent="DmgBoostsMultPanel/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]Fire Dmg +999%
Water Dmg +999%
Lightning Dmg +999%
Wind Dmg +999%
Earth Dmg +999%
Nature Dmg +999%
Dark Dmg +999%
Astral Dmg +999%[/center]"
fit_content = true

[node name="KeywordDmgMultText" type="RichTextLabel" parent="DmgBoostsMultPanel/HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "[center]KEYWORD1 Dmg +999%
KEYWORD2 Dmg +999%
KEYWORD3 Dmg +999%[/center]"
fit_content = true

[node name="ElementEffectivenessPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -570.0
offset_top = -165.0
offset_right = -10.0
offset_bottom = -6.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = ExtResource("12_nophx")

[node name="ElementWeaknessesText" type="RichTextLabel" parent="ElementEffectivenessPanel"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Weak to Fire, Water, Lightning, Wind, Earth, Nature, Dark, and Astral
THIRD COLUMN[/center]"

[node name="ElementResistancesText" type="RichTextLabel" parent="ElementEffectivenessPanel"]
clip_contents = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 87.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Resistant to Fire, Water, Lightning, Wind, Earth, Nature, Dark, and Astral
THIRD COLUMN[/center]"

[node name="EquipmentIconsPanel" parent="." instance=ExtResource("11_1hqtk")]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -102.0
offset_right = 570.0
offset_bottom = -6.0
grow_vertical = 0

[node name="WeaponLabel" parent="EquipmentIconsPanel/HBoxContainer/WeaponControl" index="0"]
offset_left = 0.0
offset_top = 0.0
offset_right = 72.0
offset_bottom = 19.0

[node name="ArmorLabel" parent="EquipmentIconsPanel/HBoxContainer/ArmorControl" index="0"]
offset_top = 0.0
offset_bottom = 19.0

[node name="AccessoryLabel" parent="EquipmentIconsPanel/HBoxContainer/AccessoryControl" index="0"]
offset_top = 0.0
offset_bottom = 17.0

[node name="ItemDetailsPanel" parent="EquipmentIconsPanel" index="1"]
anchors_preset = -1
anchor_left = -0.197
anchor_top = -7.369
anchor_right = 2.089
anchor_bottom = 3.166
offset_left = 0.320007
offset_top = -0.575928
offset_right = 0.160034
offset_bottom = 0.0639954

[node name="BattleRunesPanel" parent="." instance=ExtResource("12_qe6f0")]
visible = false
layout_mode = 1

[node name="TooltipPanel" parent="." instance=ExtResource("8_ipv3d")]
visible = false
layout_mode = 1

[connection signal="pressed" from="HBoxContainer/StatusHelpButton" to="." method="_on_status_help_button_pressed"]
[connection signal="pressed" from="RunesButton" to="." method="_on_runes_button_pressed"]
[connection signal="back_pressed" from="BattleRunesPanel" to="." method="_on_battle_runes_panel_back_pressed"]
[connection signal="ok_pressed" from="TooltipPanel" to="." method="_on_tooltip_panel_ok_pressed"]

[editable path="EquipmentIconsPanel"]
